fix: update creation card background gradient for improved visual effect and better visibility for card titles

--- a/sass/components/_creation-card.scss
+++ b/sass/components/_creation-card.scss
@@ -13,9 +13,9 @@
     position: absolute;
     inset: 0;
     background: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.65) 0%,
-      rgba(0, 0, 0, 0) 50%
+      to top right,
+      rgba(0, 0, 0, 0.65) 10%,
+      rgba(0, 0, 0, 0) 70%
     );
     z-index: 1;
     transition: background-color 0.3s ease-in-out;
